primera screen first mobile

--- a/screens/index.html
+++ b/screens/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./../styles/main.css">
 
 
@@ -14,9 +18,247 @@
 
   <header class="header">
     <section class="container">
+      <a href="./index.html" class="header__logo">
+        <div class="header__logo__principal"></div>
+      </a>
 
+      <a href="#" class="header__btn__login">Login</a>
+
+      <label for="header__formulario__busqueda" class="label">
+        <input class="input__formulario__busqueda" type="text" name="busqueda" id="busqueda"
+          placeholder="¿Qué deseas buscar?">
+
+        <a href="#" class="btn__formulario__busqueda"><i class="bi bi-search"></i></a>
+
+      </label>
     </section>
   </header>
+
+  <main class="main">
+
+    <section class="banner__hero__image">
+      <div class="banner__image__info">
+        <h2>
+          Febrero Promocional
+        </h2>
+        <p>
+          Productos seleccionados con 33% de descuento
+        </p>
+        <a class="banner__hero__btn" href="#">Ver Consolas</a>
+      </div>
+    </section>
+
+    <section class="section__products">
+      <header class="section__products__header">
+        <h2>Star Wars</h2>
+
+        <a href="#" class="products__btn">Ver todo
+          <i class="bi bi-arrow-right-short"></i>
+        </a>
+      </header>
+
+      <div class="products__container">
+
+        <article class="product__card">
+          <div class="product__card__img__container">
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <a href="#" class="product__card__link">Ver producto</a>
+        </article>
+
+        <article class="product__card">
+          <div class="product__card__img__container">
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <a href="#" class="product__card__link">Ver producto</a>
+        </article>
+
+        <article class="product__card">
+          <div class="product__card__img__container">
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <a href="#" class="product__card__link">Ver producto</a>
+        </article>
+
+        <article class="product__card">
+          <div class="product__card__img__container">
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <a href="#" class="product__card__link">Ver producto</a>
+        </article>
+
+
+
+
+
+
+      </div>
+
+    </section>
+
+    <section class="section__products">
+      <header class="section__products__header">
+        <h2>Consolas</h2>
+
+        <a href="#" class="products__btn">Ver todo
+          <i class="bi bi-arrow-right-short"></i>
+        </a>
+      </header>
+
+      <div class="products__container">
+
+        <article class="product__card">
+          <div class="product__card__img__container">
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <a href="#" class="product__card__link">Ver producto</a>
+        </article>
+
+        <article class="product__card">
+          <div class="product__card__img__container">
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <a href="#" class="product__card__link">Ver producto</a>
+        </article>
+
+        <article class="product__card">
+          <div class="product__card__img__container">
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <a href="#" class="product__card__link">Ver producto</a>
+        </article>
+
+        <article class="product__card">
+          <div class="product__card__img__container">
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <a href="#" class="product__card__link">Ver producto</a>
+        </article>
+
+
+
+
+
+
+      </div>
+
+    </section>
+
+    <section class="section__products">
+      <header class="section__products__header">
+        <h2>Diversos</h2>
+
+        <a href="#" class="products__btn">Ver todo
+          <i class="bi bi-arrow-right-short"></i>
+        </a>
+      </header>
+
+      <div class="products__container">
+
+        <article class="product__card">
+          <div class="product__card__img__container">
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <a href="#" class="product__card__link">Ver producto</a>
+        </article>
+
+        <article class="product__card">
+          <div class="product__card__img__container">
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <a href="#" class="product__card__link">Ver producto</a>
+        </article>
+
+        <article class="product__card">
+          <div class="product__card__img__container">
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <a href="#" class="product__card__link">Ver producto</a>
+        </article>
+
+        <article class="product__card">
+          <div class="product__card__img__container">
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <a href="#" class="product__card__link">Ver producto</a>
+        </article>
+
+
+
+
+
+
+      </div>
+
+    </section>
+
+    <section class="contacto">
+      <img class="contacto__logo" src="./../assets/img/logo.svg" alt="Logo de Alura Geek">
+
+      <nav class="contacto__nav">
+        <ul class="contacto__lista">
+          <li class="contacto__item"><a href="#" class="contacto__link">Quienes somos</a></li>
+          <li class="contacto__item"><a href="#" class="contacto__link">Politica de privacidad</a></li>
+          <li class="contacto__item"><a href="#" class="contacto__link">Programa de fidelidad</a></li>
+          <li class="contacto__item"><a href="#" class="contacto__link">Nuestra tiendas</a></li>
+          <li class="contacto__item"><a href="#" class="contacto__link">Quiero ser franquiciado</a></li>
+          <li class="contacto__item"><a href="#" class="contacto__link">Anúncie aquí</a></li>
+        </ul>
+      </nav>
+
+      <form action="" class="formulario__contacto">
+        <label class="label__name" for="Name">Nombre</label>
+        <input class="input__name" type="text" name="Name" id="Name">
+
+        <textarea class="input__textarea" name="mensaje" id="mensaje" cols="30" rows="5"
+          placeholder="Mensaje"></textarea>
+
+        <input class="input__button" type="button" value="Enviar mensaje">
+      </form>
+
+    </section>
+
+  </main>
+
+  <footer class="footer">
+    <p>Desarrollado por Isaac C. &copy;2023</p>
+  </footer>
 
 </body>
 
