terminando el html y estilos de index.html

--- a/screens/index.html
+++ b/screens/index.html
@@ -17,18 +17,18 @@
 <body>
 
   <header class="header">
-    <section class="container">
+    <section class="header__container">
       <a href="./index.html" class="header__logo">
         <div class="header__logo__principal"></div>
       </a>
 
-      <a href="#" class="header__btn__login">Login</a>
+      <a href="#" class="header__btn-login">Login</a>
 
-      <label for="header__formulario__busqueda" class="label">
-        <input class="input__formulario__busqueda" type="text" name="busqueda" id="busqueda"
+      <label for="header__formulario__busqueda" class="header__label">
+        <input class="header__input-busqueda" type="text" name="busqueda" id="busqueda"
           placeholder="¿Qué deseas buscar?">
 
-        <a href="#" class="btn__formulario__busqueda"><i class="bi bi-search"></i></a>
+        <a href="#" class="header__btn-busqueda"><i class="bi bi-search"></i></a>
 
       </label>
     </section>
@@ -36,221 +36,223 @@
 
   <main class="main">
 
-    <section class="banner__hero__image">
-      <div class="banner__image__info">
-        <h2>
+    <section class="banner">
+      <div class="banner__image-info">
+        <h2 class="banner__title">
           Febrero Promocional
         </h2>
-        <p>
+        <p class="bammer">
           Productos seleccionados con 33% de descuento
         </p>
-        <a class="banner__hero__btn" href="#">Ver Consolas</a>
+        <a class="banner__btn" href="#">Ver Consolas</a>
       </div>
     </section>
 
-    <section class="section__products">
-      <header class="section__products__header">
-        <h2>Star Wars</h2>
+    <div class="products">
 
-        <a href="#" class="products__btn">Ver todo
-          <i class="bi bi-arrow-right-short"></i>
-        </a>
-      </header>
+      <section class="section__products">
+        <header class="section__products__header">
 
-      <div class="products__container">
+          <h2 class="products__title">Star Wars</h2>
 
-        <article class="product__card">
-          <div class="product__card__img__container">
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <a href="#" class="product__card__link">Ver producto</a>
-        </article>
+          <a href="#" class="products__btn">Ver todo
+            <i class="bi bi-arrow-right-short"></i>
+          </a>
 
-        <article class="product__card">
-          <div class="product__card__img__container">
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <a href="#" class="product__card__link">Ver producto</a>
-        </article>
+        </header>
 
-        <article class="product__card">
-          <div class="product__card__img__container">
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <a href="#" class="product__card__link">Ver producto</a>
-        </article>
+        <div class="products__container">
 
-        <article class="product__card">
-          <div class="product__card__img__container">
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <a href="#" class="product__card__link">Ver producto</a>
-        </article>
+          <article class="product__card">
+            <div class="product__card__img-container">
+            </div>
+            <p class="product__card__title">Producto XYZ</p>
+            <span class="product__card__price">
+              $60,00
+            </span>
+            <a href="#" class="product__card__link">Ver producto</a>
+          </article>
 
+          <article class="product__card">
+            <div class="product__card__img-container">
+            </div>
+            <p class="product__card__title">Producto XYZ</p>
+            <span class="product__card__price">
+              $60,00
+            </span>
+            <a href="#" class="product__card__link">Ver producto</a>
+          </article>
 
+          <article class="product__card">
+            <div class="product__card__img-container">
+            </div>
+            <p class="product__card__title">Producto XYZ</p>
+            <span class="product__card__price">
+              $60,00
+            </span>
+            <a href="#" class="product__card__link">Ver producto</a>
+          </article>
 
+          <article class="product__card">
+            <div class="product__card__img-container">
+            </div>
+            <p class="product__card__title">Producto XYZ</p>
+            <span class="product__card__price">
+              $60,00
+            </span>
+            <a href="#" class="product__card__link">Ver producto</a>
+          </article>
 
+        </div>
 
+      </section>
 
-      </div>
+      <section class="section__products">
+        <header class="section__products__header">
+          <h2 class="product__title">Consolas</h2>
 
-    </section>
+          <a href="#" class="products__btn">Ver todo
+            <i class="bi bi-arrow-right-short"></i>
+          </a>
+        </header>
 
-    <section class="section__products">
-      <header class="section__products__header">
-        <h2>Consolas</h2>
+        <div class="products__container">
 
-        <a href="#" class="products__btn">Ver todo
-          <i class="bi bi-arrow-right-short"></i>
-        </a>
-      </header>
+          <article class="product__card">
+            <div class="product__card__img-container">
+            </div>
+            <p class="product__card__title">Producto XYZ</p>
+            <span class="product__card__price">
+              $60,00
+            </span>
+            <a href="#" class="product__card__link">Ver producto</a>
+          </article>
 
-      <div class="products__container">
+          <article class="product__card">
+            <div class="product__card__img-container">
+            </div>
+            <p class="product__card__title">Producto XYZ</p>
+            <span class="product__card__price">
+              $60,00
+            </span>
+            <a href="#" class="product__card__link">Ver producto</a>
+          </article>
 
-        <article class="product__card">
-          <div class="product__card__img__container">
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <a href="#" class="product__card__link">Ver producto</a>
-        </article>
+          <article class="product__card">
+            <div class="product__card__img-container">
+            </div>
+            <p class="product__card__title">Producto XYZ</p>
+            <span class="product__card__price">
+              $60,00
+            </span>
+            <a href="#" class="product__card__link">Ver producto</a>
+          </article>
 
-        <article class="product__card">
-          <div class="product__card__img__container">
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <a href="#" class="product__card__link">Ver producto</a>
-        </article>
+          <article class="product__card">
+            <div class="product__card__img-container">
+            </div>
+            <p class="product__card__title">Producto XYZ</p>
+            <span class="product__card__price">
+              $60,00
+            </span>
+            <a href="#" class="product__card__link">Ver producto</a>
+          </article>
+        </div>
 
-        <article class="product__card">
-          <div class="product__card__img__container">
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <a href="#" class="product__card__link">Ver producto</a>
-        </article>
+      </section>
 
-        <article class="product__card">
-          <div class="product__card__img__container">
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <a href="#" class="product__card__link">Ver producto</a>
-        </article>
+      <section class="section__products">
+        <header class="section__products__header">
+          <h2 class="products__title">Diversos</h2>
 
+          <a href="#" class="products__btn">Ver todo
+            <i class="bi bi-arrow-right-short"></i>
+          </a>
+        </header>
 
+        <div class="products__container">
 
+          <article class="product__card">
+            <div class="product__card__img-container">
+            </div>
+            <p class="product__card__title">Producto XYZ</p>
+            <span class="product__card__price">
+              $60,00
+            </span>
+            <a href="#" class="product__card__link">Ver producto</a>
+          </article>
 
+          <article class="product__card">
+            <div class="product__card__img-container">
+            </div>
+            <p class="product__card__title">Producto XYZ</p>
+            <span class="product__card__price">
+              $60,00
+            </span>
+            <a href="#" class="product__card__link">Ver producto</a>
+          </article>
 
+          <article class="product__card">
+            <div class="product__card__img-container">
+            </div>
+            <p class="product__card__title">Producto XYZ</p>
+            <span class="product__card__price">
+              $60,00
+            </span>
+            <a href="#" class="product__card__link">Ver producto</a>
+          </article>
 
-      </div>
-
-    </section>
-
-    <section class="section__products">
-      <header class="section__products__header">
-        <h2>Diversos</h2>
-
-        <a href="#" class="products__btn">Ver todo
-          <i class="bi bi-arrow-right-short"></i>
-        </a>
-      </header>
-
-      <div class="products__container">
-
-        <article class="product__card">
-          <div class="product__card__img__container">
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <a href="#" class="product__card__link">Ver producto</a>
-        </article>
-
-        <article class="product__card">
-          <div class="product__card__img__container">
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <a href="#" class="product__card__link">Ver producto</a>
-        </article>
-
-        <article class="product__card">
-          <div class="product__card__img__container">
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <a href="#" class="product__card__link">Ver producto</a>
-        </article>
-
-        <article class="product__card">
-          <div class="product__card__img__container">
-          </div>
-          <p class="product__card__title">Producto XYZ</p>
-          <span class="product__card__price">
-            $60,00
-          </span>
-          <a href="#" class="product__card__link">Ver producto</a>
-        </article>
+          <article class="product__card">
+            <div class="product__card__img-container">
+            </div>
+            <p class="product__card__title">Producto XYZ</p>
+            <span class="product__card__price">
+              $60,00
+            </span>
+            <a href="#" class="product__card__link">Ver producto</a>
+          </article>
 
 
 
 
 
 
-      </div>
+        </div>
 
-    </section>
+      </section>
+
+    </div>
+
 
     <section class="contacto">
-      <img class="contacto__logo" src="./../assets/img/logo.svg" alt="Logo de Alura Geek">
 
-      <nav class="contacto__nav">
-        <ul class="contacto__lista">
-          <li class="contacto__item"><a href="#" class="contacto__link">Quienes somos</a></li>
-          <li class="contacto__item"><a href="#" class="contacto__link">Politica de privacidad</a></li>
-          <li class="contacto__item"><a href="#" class="contacto__link">Programa de fidelidad</a></li>
-          <li class="contacto__item"><a href="#" class="contacto__link">Nuestra tiendas</a></li>
-          <li class="contacto__item"><a href="#" class="contacto__link">Quiero ser franquiciado</a></li>
-          <li class="contacto__item"><a href="#" class="contacto__link">Anúncie aquí</a></li>
-        </ul>
-      </nav>
+      <div class="contacto__container">
+        <div class="contacto__info">
+          <img class="contacto__logo" src="./../assets/img/logo.svg" alt="Logo de Alura Geek">
 
-      <form action="" class="formulario__contacto">
-        <label class="label__name" for="Name">Nombre</label>
-        <input class="input__name" type="text" name="Name" id="Name">
+          <nav class="contacto__nav">
+            <ul class="contacto__lista">
+              <li class="contacto__item"><a href="#" class="contacto__link">Quienes somos</a></li>
+              <li class="contacto__item"><a href="#" class="contacto__link">Politica de privacidad</a></li>
+              <li class="contacto__item"><a href="#" class="contacto__link">Programa de fidelidad</a></li>
+              <li class="contacto__item"><a href="#" class="contacto__link">Nuestra tiendas</a></li>
+              <li class="contacto__item"><a href="#" class="contacto__link">Quiero ser franquiciado</a></li>
+              <li class="contacto__item"><a href="#" class="contacto__link">Anúncie aquí</a></li>
+            </ul>
+          </nav>
+        </div>
 
-        <textarea class="input__textarea" name="mensaje" id="mensaje" cols="30" rows="5"
-          placeholder="Mensaje"></textarea>
+        <form action="" class="contacto__formulario">
+          <label class="label__name" for="Name">Nombre</label>
+          <input class="input__name" type="text" name="Name" id="Name">
 
-        <input class="input__button" type="button" value="Enviar mensaje">
-      </form>
+          <textarea class="input__textarea" name="mensaje" id="mensaje" cols="30" rows="5"
+            placeholder="Mensaje"></textarea>
+
+          <input class="input__button" type="button" value="Enviar mensaje">
+        </form>
+      </div>
+
 
     </section>
 
