terminando de maquetar la screen de productos con estilos

--- a/screens/productos.html
+++ b/screens/productos.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./../styles/login.css">
+  <link rel="stylesheet" href="./../styles/productos.css">
 
 
   <title>Login - Comercio Electronico</title>
@@ -27,15 +27,267 @@
         <input class="header__input-busqueda" type="text" name="busqueda" id="busqueda"
           placeholder="¿Qué deseas buscar?">
 
-        <a href="#" class="header__btn-busqueda"><i class="bi bi-search"></i></a>
-
+        <i class="bi bi-search header__btn-busqueda"></i>
       </label>
     </section>
   </header>
 
   <main class="main">
 
+    <section class="productos">
+      <header class="productos__header">
+        <h2 class="productos__header-titulo">
+          Todos los productos
+        </h2>
+        <a class="productos__header-btn" href="#">Agregar producto</a>
+      </header>
 
+
+      <div class="productos__container">
+
+        <article class="product__card">
+          <div class="product__card__img-container">
+            <p>
+              <i class="bi bi-trash-fill"></i>
+              <i class="bi bi-pencil-fill"></i>
+            </p>
+
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <p class="product__card__id">
+            #1111111
+          </p>
+        </article>
+
+        <article class="product__card">
+          <div class="product__card__img-container">
+            <p>
+              <i class="bi bi-trash-fill"></i>
+              <i class="bi bi-pencil-fill"></i>
+            </p>
+
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <p class="product__card__id">
+            #1111111
+          </p>
+        </article>
+
+        <article class="product__card">
+          <div class="product__card__img-container">
+            <p>
+              <i class="bi bi-trash-fill"></i>
+              <i class="bi bi-pencil-fill"></i>
+            </p>
+
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <p class="product__card__id">
+            #1111111
+          </p>
+        </article>
+
+        <article class="product__card">
+          <div class="product__card__img-container">
+            <p>
+              <i class="bi bi-trash-fill"></i>
+              <i class="bi bi-pencil-fill"></i>
+            </p>
+
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <p class="product__card__id">
+            #1111111
+          </p>
+        </article>
+
+        <article class="product__card">
+          <div class="product__card__img-container">
+            <p>
+              <i class="bi bi-trash-fill"></i>
+              <i class="bi bi-pencil-fill"></i>
+            </p>
+
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <p class="product__card__id">
+            #1111111
+          </p>
+        </article>
+
+        <article class="product__card">
+          <div class="product__card__img-container">
+            <p>
+              <i class="bi bi-trash-fill"></i>
+              <i class="bi bi-pencil-fill"></i>
+            </p>
+
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <p class="product__card__id">
+            #1111111
+          </p>
+        </article>
+
+        <article class="product__card">
+          <div class="product__card__img-container">
+            <p>
+              <i class="bi bi-trash-fill"></i>
+              <i class="bi bi-pencil-fill"></i>
+            </p>
+
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <p class="product__card__id">
+            #1111111
+          </p>
+        </article>
+
+        <article class="product__card">
+          <div class="product__card__img-container">
+            <p>
+              <i class="bi bi-trash-fill"></i>
+              <i class="bi bi-pencil-fill"></i>
+            </p>
+
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <p class="product__card__id">
+            #1111111
+          </p>
+        </article>
+
+        <article class="product__card">
+          <div class="product__card__img-container">
+            <p>
+              <i class="bi bi-trash-fill"></i>
+              <i class="bi bi-pencil-fill"></i>
+            </p>
+
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <p class="product__card__id">
+            #1111111
+          </p>
+        </article>
+
+        <article class="product__card">
+          <div class="product__card__img-container">
+            <p>
+              <i class="bi bi-trash-fill"></i>
+              <i class="bi bi-pencil-fill"></i>
+            </p>
+
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <p class="product__card__id">
+            #1111111
+          </p>
+        </article>
+
+        <article class="product__card">
+          <div class="product__card__img-container">
+            <p>
+              <i class="bi bi-trash-fill"></i>
+              <i class="bi bi-pencil-fill"></i>
+            </p>
+
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <p class="product__card__id">
+            #1111111
+          </p>
+        </article>
+
+        <article class="product__card">
+          <div class="product__card__img-container">
+            <p>
+              <i class="bi bi-trash-fill"></i>
+              <i class="bi bi-pencil-fill"></i>
+            </p>
+
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <p class="product__card__id">
+            #1111111
+          </p>
+        </article>
+
+        <article class="product__card">
+          <div class="product__card__img-container">
+            <p>
+              <i class="bi bi-trash-fill"></i>
+              <i class="bi bi-pencil-fill"></i>
+            </p>
+
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <p class="product__card__id">
+            #1111111
+          </p>
+        </article>
+
+
+        <article class="product__card">
+          <div class="product__card__img-container">
+            <p>
+              <i class="bi bi-trash-fill"></i>
+              <i class="bi bi-pencil-fill"></i>
+            </p>
+
+          </div>
+          <p class="product__card__title">Producto XYZ</p>
+          <span class="product__card__price">
+            $60,00
+          </span>
+          <p class="product__card__id">
+            #1111111
+          </p>
+        </article>
+
+
+      </div>
+
+    </section>
 
 
 
