terminando de maquetar la screen de nuevos productos con estilos

--- a/screens/productos.html
+++ b/screens/productos.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./../styles/productos.css">
 
 
-  <title>Login - Comercio Electronico</title>
+  <title>Productos - Comercio Electronico</title>
 </head>
 
 <body>
