--- a/screens/login.html
+++ b/screens/login.html
@@ -98,6 +98,17 @@
   <footer class="footer">
     <p>Desarrollado por Isaac C. &copy;2023</p>
   </footer>
+  <script>
+
+    const btnIngreso = document.querySelector(".formulario__login-btn");
+
+    btnIngreso.addEventListener("click", function () {
+      // Cambiar la URL de la página actual al archivo HTML deseado
+      window.location.href = "./../screens/productos.html";
+    });
+
+
+  </script>
 
 </body>
 
