--- a/screens/productos.html
+++ b/screens/productos.html
@@ -331,6 +331,16 @@
     <p>Desarrollado por Isaac C. &copy;2023</p>
   </footer>
 
+  <script>
+    const btnAgregarProducto = document.querySelector(".productos__header-btn");
+
+    btnAgregarProducto.addEventListener("click", function () {
+      // Cambiar la URL de la página actual al archivo HTML deseado
+      window.location.href = "./../screens/nuevo-producto.html";
+    });
+
+  </script>
+
 </body>
 
 </html>
