--- a/screens/nuevo-producto.html
+++ b/screens/nuevo-producto.html
@@ -114,6 +114,18 @@
     <p>Desarrollado por Isaac C. &copy;2023</p>
   </footer>
 
+
+  <script>
+
+    const btnAdministrador = document.querySelector(".header__btn-administrador");
+
+    btnAdministrador.addEventListener("click", function () {
+      // Cambiar la URL de la página actual al archivo HTML deseado
+      window.location.href = "./../screens/productos.html";
+    });
+
+  </script>
+
 </body>
 
 </html>
