--- a/screens/nuevo-producto.html
+++ b/screens/nuevo-producto.html
@@ -114,6 +114,8 @@
     <p>Desarrollado por Isaac C. &copy;2023</p>
   </footer>
 
+  <script type="module" src="./../controllers/registro-controller.js
+"></script>
 
   <script>
 
